rustcc/tests/input/lexer/invalid/invalid_identifier_2.c
// RUN: ${{rustcc}} --print-tokens
// EXPECT-FAILURE

int main(void)
{
    return @b;
}